--- a/app/views/layouts/_review_form.html.erb
+++ b/app/views/layouts/_review_form.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a new review:</h1>
+<%= render "layouts/errors", :object => @review %>
 
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :author %>
