--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,17 +1,5 @@
-<h1>Products</h1>
-
-<% if @products.any? %>
-  <ul>
-    <% @products.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>There are no products yet.</p>
-<% end %>
-
 <% if Product.three_most_recent.any? %>
-  <h2>Newest additions</h2>
+  <h2>Newest additions:</h2>
   <ul>
     <% Product.three_most_recent.each do |product| %>
       <li><%= link_to product.name, product_path(product) %></li>
@@ -26,6 +14,27 @@
       <li><%= link_to product.name, product_path(product) %></li>
     <% end %>
   </ul>
+<% end %>
+
+<% if Product.usa.any? %>
+  <h2>Made in the USA:</h2>
+  <ul>
+    <% Product.usa.each do |product| %>
+      <li><%= link_to product.name, product_path(product) %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<h1>All Products</h1>
+
+<% if @products.any? %>
+  <ul>
+    <% @products.each do |product| %>
+      <li><%= link_to product.name, product_path(product) %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no products yet.</p>
 <% end %>
 
 <p><%= link_to "Create new product", new_product_path %></p>
