--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
   <h2>Newest additions:</h2>
   <ul>
     <% Product.three_most_recent.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
+      <li><%= product.name %></li>
     <% end %>
   </ul>
 <% end %>
@@ -10,7 +10,7 @@
 <% if Product.most_reviews %>
   <h2>Our most reviewed product:</h2>
   <ul>
-    <li><%= link_to Product.most_reviews.name, product_path(Product.most_reviews) %></li>
+    <li><%= Product.most_reviews.name %></li>
   </ul>
 <% end %>
 
@@ -18,7 +18,7 @@
   <h2>Made in the USA:</h2>
   <ul>
     <% Product.usa.each do |product| %>
-      <li><%= link_to product.name, product_path(product) %></li>
+      <li><%= product.name %></li>
     <% end %>
   </ul>
 <% end %>
