--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
 
   <body>
 
+    <% if current_user %>
+      <%= current_user.email %> | <%= link_to "Sign Out", '/users/sign_out', :method => :delete %>
+    <% else %>
+      <%= link_to "Sign Up", '/users/sign_up' %> | <%= link_to "Sign In", '/users/sign_in' %>
+    <% end %>
+
     <%= flash[:alert] %>
     <%= flash[:notice] %>
 
