add bootstrap gem, adjust files to enable, start styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,18 @@
   </head>
 
   <body>
+    <div class="container">
+      <% if current_user %>
+        <%= current_user.email %> | <%= link_to "Sign Out", '/users/sign_out', :method => :delete %>
+      <% else %>
+        <%= link_to "Sign Up", '/users/sign_up' %> | <%= link_to "Sign In", '/users/sign_in' %>
+      <% end %>
+  
+    
+      <%= flash[:alert] %>
+      <%= flash[:notice] %>
 
-    <% if current_user %>
-      <%= current_user.email %> | <%= link_to "Sign Out", '/users/sign_out', :method => :delete %>
-    <% else %>
-      <%= link_to "Sign Up", '/users/sign_up' %> | <%= link_to "Sign In", '/users/sign_in' %>
-    <% end %>
-
-    <%= flash[:alert] %>
-    <%= flash[:notice] %>
-
-    <%= yield %>
+      <%= yield %>
+    </div>
   </body>
 </html>
