--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <% if current_user %>
         <%= current_user.email %> | <%= link_to "Sign Out", '/users/sign_out', :method => :delete %>
       <% else %>
