--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col-6">
+  <div class="col-2">
+  </div>
+  <div class="col-4">
     <% if Product.three_most_recent.any? %>
       <h2>Newest additions:</h2>
       <ul>
@@ -28,7 +30,7 @@
     <p><%= link_to "Add new product", new_product_path %></p>
   </div>
 
-  <div class="col-6">
+  <div class="col-4">
   <h1>All Products</h1>
     <% if @products.any? %>
     <ul>
@@ -39,5 +41,7 @@
       <% else %>
       <p>There are no products yet.</p>
       <% end %>
+  </div>
+  <div class="col-2">
   </div>
 </div>
