--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @product.name %></h1>
-<h3>Cost: <%= @product.cost %></h3>
+<h3>Cost: $<%= @product.cost %></h3>
 <h3>Country of origin: <%= @product.country_of_origin %></h3>
 
 <% if @product.reviews.any? %>
