--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,50 +1,14 @@
-<div class="row">
-  <div class="col-2">
-  </div>
-  <div class="col-4">
-    <% if Product.three_most_recent.any? %>
-      <h2>Newest additions:</h2>
-      <ul>
-        <% Product.three_most_recent.each do |product| %>
-          <li><%= product.name %></li>
-        <% end %>
-      </ul>
-    <% end %>
 
-    <% if Product.most_reviews %>
-      <h2>Our most reviewed product:</h2>
-      <ul>
-        <li><%= Product.most_reviews.name %></li>
-      </ul>
-    <% end %>
-
-    <% if Product.usa.any? %>
-      <h2>Made in the USA:</h2>
-      <ul>
-        <% Product.usa.each do |product| %>
-          <li><%= product.name %></li>
-        <% end %>
-      </ul>
-    <% end %>
-
-    <p><%= link_to "Add new product", new_product_path %></p>
-  </div>
-  <div class="col-1">
-  </div>
-  <div class="col-4">
-    <h1>All Products</h1>
-    <div class="scroller"
-      <% if @products.any? %>
-      <ul>
+<h1>All Products</h1>
+<div class="scroller"
+  <% if @products.any? %>
+    <ul>
       <% @products.each do |product| %>
         <li><%= link_to product.name, product_path(product) %></li>
-        <% end %>
-        </ul>
-        <% else %>
-        <p>There are no products yet.</p>
-        <% end %>
-    </div>
-  </div>
-  <div class="col-1">
-  </div>
-</div>
+      <% end %>
+    </ul>
+  <% else %>
+    <p>There are no products yet.</p>
+  <% end %>
+</div>  
+<p class="add"><%= link_to "Add new product", new_product_path %></p>
