make adjustments to specs to accomodate new landing page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,3 +12,5 @@
   <% end %>
 </div>  
 <p class="add"><%= link_to "Add new product", new_product_path %></p>
+
+<p><%= link_to "Back to home", root_path %></p>
